--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
     <title>Calculator</title>
@@ -13,37 +14,37 @@
     <div class="Calculator">
         <div class="first-row">
             <div class="screen"></div>
-            <button class="clear">C</button>
+            <button class="btn clear">C</button>
         </div>
 
         <div class="other-rows">
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="operator">/</button>
+            <button class="btn number">8</button>
+            <button class="btn number">9</button>
+            <button class="btn number">7</button>
+            <button class="btn operator">/</button>
         </div>
 
         <div class="other-rows">
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="operator">x</button>
-
-        </div>
-
-        <div class="other-rows">
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="operator">-</button>
+            <button class="btn number">5</button>
+            <button class="btn number">6</button>
+            <button class="btn number">4</button>
+            <button class="btn operator">x</button>
 
         </div>
 
         <div class="other-rows">
-            <button class="decimal">.</button>
-            <button class="number">0</button>
-            <button class="equal">=</button>
-            <button class="operator">+</button>
+            <button class="btn number">1</button>
+            <button class="btn number">2</button>
+            <button class="btn number">3</button>
+            <button class="btn operator">-</button>
+
+        </div>
+
+        <div class="other-rows">
+            <button class="btn decimal">.</button>
+            <button class="btn number">0</button>
+            <button class="btn equal">=</button>
+            <button class="btn operator">+</button>
 
         </div>
 
